Avalara Fullqa/src/Radian6 for Salesforce.com/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>SocialMedia</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>InitialPostId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the ID of the post that spawned this case.</description>
        <inlineHelpText>The social media post that raised this issue.</inlineHelpText>
        <label>Initial Post</label>
        <referenceTo>SocialPost</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MediaIconResource__c</fullName>
        <description>A formula used by the media icon. Should not be made visible.</description>
        <formula>IF(CONTAINS(UPPER(MediaProvider__c),&quot;TWITTER&quot;), &quot;/resource/R6Service__Twitter_Logo&quot;, 
IF(CONTAINS(UPPER(MediaProvider__c), &quot;FACEBOOK&quot;), &quot;/resource/R6Service__Facebook_Logo&quot;, 
IF(CONTAINS(UPPER(MediaProvider__c), &quot;YOUTUBE&quot;), &quot;/resource/R6Service__MediaTypeYouTubeIcon&quot;, 
CASE(UPPER(MediaType__c), 
&quot;BLOGS&quot;, &quot;/resource/R6Service__MediaTypeBlogIcon&quot;, 
&quot;VIDEOS&quot;, &quot;/resource/R6Service__MediaTypeVideoIcon&quot;, 
&quot;IMAGES&quot;, &quot;/resource/R6Service__MediaTypeImageIcon&quot;, 
&quot;MAINSTREAM NEWS&quot;, &quot;/resource/R6Service__MediaTypeNewsIcon&quot;, 
&quot;MICROMEDIA&quot;, &quot;/resource/R6Service__MediaTypeMicromediaIcon&quot;, 
&quot;FORUM&quot;, &quot;/resource/R6Service__MediaTypeForumIcon&quot;, 
&quot;COMMENTS&quot;, &quot;/resource/R6Service__MediaTypeCommentIcon&quot;, 
&quot;SINA WEIBO&quot;, &quot;/resource/Sina_Logo&quot;,
&quot;TENCENT WEIBO&quot;, &quot;/resource/R6Service__Tencent_Logo&quot;, 
&quot;/resource/R6Service__DefaultChannelLogo&quot; 
))))</formula>
        <label>Media Icon Resource</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MediaIcon__c</fullName>
        <description>The icon that represents the medium that initiated the case. This will be the provider&apos;s logo for common providers, or generic media type logos for less popular providers.</description>
        <formula>IMAGE(MediaIconResource__c, MediaType__c +&quot;/&quot; + MediaProvider__c, 48, 48)</formula>
        <inlineHelpText>The media provider or media type of the post that initiated the case.</inlineHelpText>
        <label>Media Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MediaProvider__c</fullName>
        <description>The media provider of the post that initiated this case.</description>
        <inlineHelpText>The social network of the post that initiated this case. For example: Facebook, Twitter, Youtube or Myspace.</inlineHelpText>
        <label>Media Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MediaType__c</fullName>
        <description>The media type for the post that initiated this case.</description>
        <inlineHelpText>The media type of the media provider. For example: Youtube is a &quot;video&quot; media type while Twitter is &quot;micromedia&quot;.</inlineHelpText>
        <label>Media Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonaAvatar__c</fullName>
        <description>Profile picture of the persona for whom the case was created, if the picture can be found.</description>
        <formula>IF(ISBLANK(SocialPersona__c), InitialPostId__r.Persona.Avatar__c, SocialPersona__r.Avatar__c)</formula>
        <inlineHelpText>User&apos;s profile picture, if it can be found.</inlineHelpText>
        <label>Avatar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecipientSMMA__c</fullName>
        <label>Recipient Social Media Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SM_Persona__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DO NOT USE. This field relates to an object that is no longer supported.</description>
        <inlineHelpText>DO NOT USE. This field relates to an object that is no longer supported.</inlineHelpText>
        <label>(DO NOT USE) Persona</label>
        <referenceTo>Persona__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SocialPersona__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the SocialPerson that made the post that generated the case.</description>
        <inlineHelpText>The Social Persona that generated the case.</inlineHelpText>
        <label>Social Persona</label>
        <referenceTo>SocialPersona</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>Aggregator_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>MediaIcon__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MediaType__c</field>
            <operation>equals</operation>
            <value>Aggregator</value>
        </filters>
        <label>Aggregator</label>
    </listViews>
    <listViews>
        <fullName>Blogs_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>MediaIcon__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MediaType__c</field>
            <operation>equals</operation>
            <value>Blogs</value>
        </filters>
        <label>Blogs</label>
    </listViews>
    <listViews>
        <fullName>BuySell_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>MediaIcon__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MediaType__c</field>
            <operation>equals</operation>
            <value>Buy/Sell</value>
        </filters>
        <label>Buy/Sell</label>
    </listViews>
    <listViews>
        <fullName>Forums_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>MediaIcon__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MediaType__c</field>
            <operation>equals</operation>
            <value>Forums,Forum Replies</value>
        </filters>
        <label>Forums</label>
    </listViews>
    <listViews>
        <fullName>GooglePlus_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>MediaIcon__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MediaProvider__c</field>
            <operation>contains</operation>
            <value>Google+</value>
        </filters>
        <label>Google+</label>
    </listViews>
    <listViews>
        <fullName>Images_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>MediaIcon__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MediaType__c</field>
            <operation>equals</operation>
            <value>Images</value>
        </filters>
        <label>Images</label>
    </listViews>
    <listViews>
        <fullName>MicroMedia_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>MediaIcon__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MediaType__c</field>
            <operation>equals</operation>
            <value>MicroMedia</value>
        </filters>
        <label>MicroMedia</label>
    </listViews>
    <listViews>
        <fullName>MySpace_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>MediaIcon__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MediaProvider__c</field>
            <operation>contains</operation>
            <value>MySpace</value>
        </filters>
        <label>MySpace</label>
    </listViews>
    <listViews>
        <fullName>News_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>MediaIcon__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MediaType__c</field>
            <operation>equals</operation>
            <value>Mainstream News</value>
        </filters>
        <label>Mainstream News</label>
    </listViews>
    <listViews>
        <fullName>Twitter_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>MediaIcon__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MediaProvider__c</field>
            <operation>contains</operation>
            <value>twitter</value>
        </filters>
        <label>Twitter</label>
    </listViews>
    <listViews>
        <fullName>Videos_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>MediaIcon__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MediaType__c</field>
            <operation>equals</operation>
            <value>Videos</value>
        </filters>
        <label>Videos</label>
    </listViews>
    <recordTypes>
        <fullName>SocialMedia</fullName>
        <active>true</active>
        <businessProcess>SocialMedia</businessProcess>
        <label>Social Media</label>
    </recordTypes>
</CustomObject>